<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.sf.ehcache</groupId>
    <artifactId>ehcache-tools</artifactId>
    <version>1.1.0</version>
    <name>EhCache tools</name>
    <description>Ehcache tools</description>

    <licenses>
        <license>
            <name>Terracotta Public License</name>
            <url>http://www.terracotta.org/license.txt</url>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <tc-connect-servers>tcvm:9510,tcvm:9610</tc-connect-servers>
        <junit.version>4.11</junit.version>
        <slf4j.version>1.7.1</slf4j.version>
    </properties>

    <developers>
        <developer>
            <id>fsanglie</id>
            <name>Fabien Sanglier</name>
            <email>fsanglie@terracottatech.com</email>
            <url>http://www.terracotta.org</url>
            <organization>Terracotta, Inc.</organization>
            <organizationUrl>http://www.terracotta.org</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>-6</timezone>
        </developer>
    </developers>

    <dependencies>
        <dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.3.2</version>
			<type>jar</type>
		</dependency>
		<dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <type>jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.lexicalscope.jewelcli</groupId>
            <artifactId>jewelcli</artifactId>
            <version>0.8.9</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.3.2</version>
        </dependency>

        <!-- SLF4J -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.1.1</version>
        </dependency>
    </dependencies>

    <build>
        <!-- <resources> <resource> <directory>src/main/resources</directory> <filtering>true</filtering>
            <includes> <include>**/*</include> </includes> </resource> </resources> -->
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.1</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>1.3.1</version>
                <configuration>
                    <configurationDirectory>config</configurationDirectory>
                    <configurationSourceDirectory>${basedir}/resources</configurationSourceDirectory>
                    <copyConfigurationDirectory>true</copyConfigurationDirectory>
                    <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
                    <repositoryLayout>flat</repositoryLayout>
                    <useWildcardClassPath>true</useWildcardClassPath>

                    <!-- Extra JVM arguments that will be included in the bin scripts -->
                    <extraJvmArguments>-Xms512m -Xmx1024m -XX:MaxPermSize=256m
                        -XX:+UseParallelOldGC -XX:+UseCompressedOops
                        -XX:MaxDirectMemorySize=10G
                        -Dcom.tc.productkey.path=${user.home}/terracotta-license.key
                        -Dehcache.config.path=/Users/FabienSanglier/MyDev/MyTools/Terracotta-Tester-Utils/GenericCacheTester1-4x/resources/ehcache.xml
                    </extraJvmArguments>
                    <programs>
                        <program>
                            <mainClass>com.terracotta.tools.EhcacheCli</mainClass>
                            <name>EhcacheCli.sh</name>
                        </program>
                    </programs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptor>src/assembly/bin.xml</descriptor>
                    <finalName>ehcache-tools</finalName>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>ehcache-2.7</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <ehcache-ee.version>2.7.6_fix2</ehcache-ee.version>
                <toolkit.version>4.0.6_fix2</toolkit.version>
            </properties>
            <dependencies>
                <!-- EhCache -->
                <dependency>
                    <groupId>net.sf.ehcache</groupId>
                    <artifactId>ehcache-ee</artifactId>
                    <version>${ehcache-ee.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.terracotta</groupId>
                    <artifactId>terracotta-toolkit-runtime-ee</artifactId>
                    <version>${toolkit.version}</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>ehcache-2.8</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <ehcache-ee.version>2.8.6</ehcache-ee.version>
                <toolkit.version>4.1.6</toolkit.version>
            </properties>
            <dependencies>
                <!-- EhCache -->
                <dependency>
                    <groupId>net.sf.ehcache</groupId>
                    <artifactId>ehcache-ee</artifactId>
                    <version>${ehcache-ee.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.terracotta</groupId>
                    <artifactId>terracotta-toolkit-runtime-ee</artifactId>
                    <version>${toolkit.version}</version>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>terracotta-snapshots</id>
            <url>http://www.terracotta.org/download/reflector/snapshots</url>
        </repository>
        <repository>
            <id>terracotta-releases</id>
            <url>http://www.terracotta.org/download/reflector/releases</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
        <repository>
            <id>saggs_thirdparty</id>
            <name>SAGGS Third Party</name>
            <url>http://bieber.softwareaggov.com:8080/nexus/content/repositories/thirdparty/</url>
        </repository>
    </repositories>
</project>
